<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">SubTypo</string>
  <string name="app_description">Create and edit subtitles simply and quickly!</string>
  <string name="close_app">Close app</string>
  <string name="settings">Settings</string>
  <string name="remove">Remove</string>
  <string name="delete">Delete</string>
  <string name="rename">Rename</string>
  <string name="edit">Edit</string>
  <string name="ok">Ok</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="copy">Copy</string>
  <string name="grant">Grant</string>
  <string name="export">Export</string>
  <string name="copy_and_report_issue">Copy and report issue</string>
  <string name="common_info">Info</string>
  <string name="common_normal">Normal</string>
  <string name="common_close">Close</string>
  <string name="common_please_wait">Please wait.</string>
  <string name="common_failed">Failed</string>
  <string name="common_selection_select">Select</string>
  <string name="update_info_msg">Important! In this latest update we changed the sqlite library to save projects, projects from older versions will disappear, we are very sorry for this inconvenience.</string>
  <string name="open_url_info_msg">You will be redirected to: %1$s. Do you wish to continue?</string>
  <string name="description_social_visit_website">Visit website</string>
  <string name="description_social_send_email">Send e-mail</string>
  <string name="description_social_view_github">View GitHub repository</string>
  <string name="description_sort_by_name">Sort by name</string>
  <string name="description_player_play_or_pause">Pause or play video</string>
  <string name="description_player_seek_backward">Backward</string>
  <string name="description_player_seek_forward">Forward</string>
  <string name="description_player_visibility">Video player visibility</string>
  <string name="description_player_playback_speed">Playback speed</string>
  <string name="description_create_project">Create a new project</string>
  <string name="description_video_thumbnail">Thumbnail of the video</string>
  <string name="description_select_video">Select a video</string>
  <string name="description_remove_video">Remove the selected video</string>
  <string name="description_delete_subtitle">Delete subtitle</string>
  <string name="permission_required">Required permissions</string>
  <string name="permission_required_detail">This app requires permissions to access video and subtitle files. Without these permissions, certain features may not function properly.</string>
  <string name="permission_required_settings_detail">Please grant the required permissions manually through the app\'s settings to ensure full functionality.</string>
  <string name="permission_required_settings_goto">Go to settings</string>
  <string name="warn_text_field_cannot_empty">This text field cannot be empty</string>
  <string name="warn_name_already_existing">Name already exists</string>
  <string name="pref_category_configure">Configure</string>
  <string name="pref_category_about">About</string>
  <string name="pref_category_appearance">Appearance</string>
  <string name="pref_category_caption_style">Caption Style</string>
  <string name="pref_configure_general">General</string>
  <string name="pref_configure_general_summary">General application settings.</string>
  <string name="pref_configure_video_player">Video player</string>
  <string name="pref_configure_video_player_summary">Configure the video player.</string>
  <string name="pref_appearance_ui_mode">UI Mode</string>
  <string name="pref_appearance_ui_mode_summary">Choose light or dark mode</string>
  <string name="pref_appearance_ui_mode_value_light">Light</string>
  <string name="pref_appearance_ui_mode_value_dark">Dark</string>
  <string name="pref_appearance_ui_mode_value_follow">Follow System</string>
  <string name="pref_appearance_dynamiccolors">Dynamic Colors</string>
  <string name="pref_appearance_dynamiccolors_summary">The app follows the device\'s dynamic theme colors.</string>
  <string name="pref_appearance_amoledmode">AMOLED Mode</string>
  <string name="pref_appearance_amoledmode_summary">If activated, the colors go to absolute dark mode.</string>
  <string name="pref_caption_style_title">Subtitle Settings</string>
  <string name="pref_caption_style_summary">Customize subtitle appearance in system settings</string>
  <string name="pref_about_app">About SubTypo</string>
  <string name="pref_about_app_summary">Learn more about SubTypo</string>
  <string name="video_picker_title">Select a video</string>
  <string name="video_picker_album_all">All</string>
  <string name="video_picker_error_no_videos">No videos found</string>
  <string name="video_player_error_generic">Playback failed</string>
  <string name="video_player_error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
  <string name="video_player_error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
  <string name="video_player_error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
  <string name="video_player_error_querying_decoders">Unable to query device decoders</string>
  <string name="video_player_error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
  <string name="video_player_error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
  <string name="video_player_error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
  <string name="about_title">About</string>
  <string name="about_contribution">Contribution</string>
  <string name="about_title_translate">Translate</string>
  <string name="about_subtitle_translate">Help SubTypo get translated into your language.</string>
  <string name="about_more">More</string>
  <string name="about_title_privacy">Privacy Policy</string>
  <string name="about_subtitle_privacy">See our privacy policy.</string>
  <string name="about_title_libraries">Libraries</string>
  <string name="about_subtitle_libraries">See the open-source libraries we use at SubTypo.</string>
  <string name="update_checker_check_failed">Failed to check for updates.</string>
  <string name="update_checker_downloaded">Update downloaded.</string>
  <string name="update_checker_complete_btn">Complete update</string>
  <string name="projects">Projects</string>
  <string name="proj_no_projects">No projects. Click \"+\" to create a project!</string>
  <string name="proj_options_title">Project Options</string>
  <string name="proj_new">New project</string>
  <string name="proj_edit">Edit project</string>
  <plurals name="proj_delete">
    <item quantity="one">Delete project</item>
    <item quantity="other">Delete projects</item>
  </plurals>
  <plurals name="proj_delete_confirmation_msg">
    <item quantity="one">Are you sure you want to delete the project: %1$s?</item>
    <item quantity="other">Are you sure you want to delete the following projects: %1$s?</item>
  </plurals>
  <plurals name="proj_deleting">
    <item quantity="one">Deleting project.</item>
    <item quantity="other">Deleting projects.</item>
  </plurals>
  <plurals name="proj_deleted">
    <item quantity="one">Project deleted!</item>
    <item quantity="other">Projects deleted!</item>
  </plurals>
  <string name="proj_no_video">No video selected for this project.</string>
  <string name="proj_edit_create">Create a new project</string>
  <string name="proj_edit_enter_name">Enter the project name</string>
  <string name="proj_edit_video_remove">Remove the video</string>
  <string name="proj_edit_video_no_select">No video has been selected.</string>
  <string name="proj_edit_video_tap_to_select">Tap to select a video (optional).</string>
  <string name="proj_edit_error_name_required">Project name is required.</string>
  <string name="proj_edit_success_create">Project created successfully!</string>
  <string name="proj_edit_success_update">Project updated successfully!</string>
  <string name="proj_initializing">Initializing project...</string>
  <string name="proj_saving">Saving project...</string>
  <string name="proj_close">Close project</string>
  <string name="proj_error_unable_to_load">Unable to load the project.</string>
  <string name="subtitles">Subtitles</string>
  <string name="subtitle_loading">Loading subtitles...</string>
  <string name="subtitle_options_title">Subtitle options</string>
  <string name="subtitle_share">Share subtitle</string>
  <string name="subtitle_share_options_title">Sharing options</string>
  <string name="subtitle_share_file">Share subtitle file</string>
  <string name="subtitle_share_save_file">Save subtitle file</string>
  <string name="subtitle_share_save_file_success">File saved successfully!</string>
  <string name="subtitle_share_save_file_failed">Failed to save file.</string>
    <string name="subtitle_open_file">Open subtitle file</string>
    <string name="subtitle_open_progress">Opening...</string>
    <string name="subtitle_open_success">Subtitle open success!</string>
    <string name="subtitle_open_failed">Subtitle open fail.</string>
  <string name="subtitle_import_failed_unsupported_format">The format \`%1$s\` is not supported.</string>
  <string name="subtitle_import_failed_invalid_file">The file is empty, or does not exist.</string>
  <string name="subtitle_import_parse_error">Subtitle parsed with errors.</string>
  <string name="subtitle_diagnostic">Diagnostic</string>
  <string name="subtitle_diagnostic_list_title">Diagnostic list</string>
  <string name="subtitle_diagnostic_list_message">Diagnostics are the errors or warnings found while parsing the subtitle file. If any text is missing from the list, it is likely due to an error in the file. The error and warning diagnostics are below: </string>
  <string name="subtitle_diagnostic_kind">Kind: %1$s</string>
  <string name="subtitle_diagnostic_line">Line: %1$s</string>
  <string name="subtitle_diagnostic_line_num">Line number: %1$s</string>
  <string name="subtitle_diagnostic_message">Message: %1$s</string>
  <string name="subtitle_translate">Translate</string>
  <string name="subtitle_translate_progress">Translating... please wait.</string>
  <string name="subtitle_translate_texts">Translate texts</string>
  <string name="subtitle_translate_choose_language">Choose a language</string>
  <string name="subtitle_translate_success">Successfully translated</string>
  <string name="subtitle_translate_failed">Translation failed, please try again later.</string>
  <string name="subtitle_translate_failed_unavailable">Service unavailable, please try again later.</string>
  <string name="subtitle_translate_failed_unexpected_response">Unexpected response from api, please try again later.</string>
  <string name="subtitle_add">Add subtitle</string>
  <string name="subtitle_edit">Edit subtitle</string>
  <string name="subtitle_delete">Delete subtitle</string>
  <string name="subtitle_delete_msg">Are you sure you want to delete this subtitle?</string>
  <string name="subtitle_list">Subtitle list</string>
  <string name="subtitle_list_empty">No subtitles. Click \"+\" to add a new one.</string>
  <string name="subtitle_enter_name">Enter a name</string>
  <string name="subtitle_enter_choose_format">Choose a format</string>
  <string name="subtitle_error_remove">Unable to delete this subtitle.</string>
  <string name="subtitle_error_not_found">Subtitle not found.</string>
  <string name="subtitle_cue_list_empty">Empty text list. Click the \"+\" below to add new text.</string>
  <string name="subtitle_cue_add">Add text</string>
  <string name="cue_list_sort_by_time">Sort text by time</string>
</resources>