<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/pref_category_configure">

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_configure_general_key"
      app:title="@string/pref_configure_general"
      app:summary="@string/pref_configure_general_summary" />

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_configure_video_player_key"
      app:title="@string/pref_configure_video_player"
      app:summary="@string/pref_configure_video_player_summary" />

  </PreferenceCategory>

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/pref_category_about">

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_about_app"
      app:title="@string/pref_about_app"
      app:summary="@string/pref_about_app_summary" />

  </PreferenceCategory>

</PreferenceScreen>