<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_category_appearance">

        <com.teixeira0x.subtypo.ui.preference.view.UIModePreference
            app:icon="@drawable/ic_ui_mode"
            app:key="pref_appearance_ui_mode_key"
            app:summary="@string/pref_appearance_ui_mode_summary"
            app:title="@string/pref_appearance_ui_mode" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_palette"
            app:key="pref_appearance_dynamiccolors_key"
            app:summary="@string/pref_appearance_dynamiccolors_summary"
            app:title="@string/pref_appearance_dynamiccolors" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_brightness_moon"
            app:key="pref_appearance_amoled_key"
            app:summary="@string/pref_appearance_amoledmode_summary"
            app:title="@string/pref_appearance_amoledmode" />

    </PreferenceCategory>

</PreferenceScreen>
