<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingHorizontal="@dimen/sheet_dialog_padding"
  android:paddingBottom="@dimen/sheet_dialog_padding"
  android:orientation="vertical">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
    android:id="@+id/drag_handle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/tv_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textAppearance="?attr/textAppearanceTitleLarge" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/card_select_video"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/sheet_dialog_padding"
    app:rippleColor="?attr/colorControlHighlight"
    app:strokeColor="?attr/colorOutlineVariant"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorSurface">

      <ImageView
        android:id="@+id/img_video_thumbnail"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@color/black"
        android:contentDescription="@string/description_video_thumbnail"
        android:clickable="false" />

      <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_toEndOf="@id/img_video_thumbnail"
        android:layout_toStartOf="@id/img_remove_video"
        android:text="@string/proj_edit_video_no_select"
        android:textSize="14sp"
        android:textColor="?attr/colorOnSurface" />

      <ImageView
        android:id="@+id/img_remove_video"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/padding_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/description_remove_video"
        android:clickable="false" />

    </RelativeLayout>

  </com.google.android.material.card.MaterialCardView>

  <TextView
    android:id="@+id/tv_select_video"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_alignBottom="@id/img_video_thumbnail"
    android:text="@string/proj_edit_video_tap_to_select"
    android:textSize="13sp"
    android:textColor="?attr/colorOnSurfaceVariant" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/sheet_dialog_padding"
    android:hint="@string/proj_edit_enter_name"
    app:startIconDrawable="@drawable/ic_form_textbox"
    app:startIconContentDescription="@null"
    style="@style/Widget.SubTypo.TextInputLayout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tie_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:singleLine="true"
      android:imeOptions="actionDone" />

  </com.google.android.material.textfield.TextInputLayout>

  <include
    android:id="@+id/dialog_buttons"
    layout="@layout/layout_dialog_buttons" />

</LinearLayout>
