<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cues"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="?attr/actionBarSize" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:indeterminate="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cues_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/subtitle_cue_list_empty" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/Widget.SubTypo.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="10dp"
        app:navigationContentDescription="@string/cue_list_sort_by_time"
        app:navigationIcon="@drawable/ic_sort_clock" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_cue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/subtitle_cue_add"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
