<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_app_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/black"
        android:contentDescription="@null"
        android:src="@mipmap/ic_launcher_foreground"
        app:shapeAppearance="@style/ShapeAppearance.SubTypo.LargeComponent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_description"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:gravity="center_horizontal"
        android:text="@string/app_description"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:strokeColor="?attr/colorOutlineVariant">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/about_contribution"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:strokeColor="?attr/colorOutlineVariant">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/about_more"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
