<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:minHeight="@dimen/video_picker_sheet_min_height">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
    android:id="@+id/drag_handle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <ImageView
    android:id="@+id/img_close"
    android:layout_height="48dp"
    android:layout_width="48dp"
    android:layout_below="@id/drag_handle"
    android:layout_marginStart="@dimen/sheet_dialog_padding"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/common_close"
    android:scaleType="centerInside"
    android:src="@drawable/ic_close" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_title"
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:layout_alignTop="@id/img_close"
    android:layout_alignBottom="@id/img_close"
    android:layout_toEndOf="@id/img_close"
    android:layout_toStartOf="@id/img_toggle_sort"
    android:gravity="center"
    android:textAppearance="?attr/textAppearanceTitleLarge"
    android:text="@string/video_picker_title"
    android:singleLine="true" />

  <ImageView
    android:id="@+id/img_toggle_sort"
    android:layout_height="48dp"
    android:layout_width="48dp"
    android:layout_below="@id/drag_handle"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="@dimen/sheet_dialog_padding"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/description_sort_by_name"
    android:scaleType="centerInside"
    android:src="@drawable/ic_sort_alphabetical_ascending" />

  <HorizontalScrollView
    android:id="@+id/hscroll_albums"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/sheet_dialog_padding"
    android:layout_marginHorizontal="@dimen/margin_medium"
    android:layout_below="@id/img_close"
    android:requiresFadingEdge="horizontal"
    android:fadingEdgeLength="15dp"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/chip_group_albums"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:chipSpacingHorizontal="@dimen/chip_group_albums_spacing"
      app:singleLine="true"
      app:singleSelection="true" />

  </HorizontalScrollView>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_video_preview_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sheet_dialog_padding"
    android:layout_below="@id/hscroll_albums" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/hscroll_albums"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:padding="@dimen/sheet_dialog_padding" />

  <com.google.android.material.progressindicator.CircularProgressIndicator
    android:id="@+id/progress_indicator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/hscroll_albums"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/sheet_dialog_padding"
    android:indeterminate="true" />

</RelativeLayout>
